<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DescriptionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <ImageView
                    android:id="@+id/desc_item_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/galaxy_photos"
                    android:scaleType="centerCrop"
                    android:src="@drawable/photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/desc_button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:alpha="0.7"
                    android:contentDescription="back"
                    android:clickable="true"
                    android:backgroundTint="@color/cardview_dark_background"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_back_light_foreground"
                    android:focusable="true" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/desc_txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingStart="16sp"
        android:paddingEnd="16sp"
        android:text="@string/title"
        android:textSize="27sp"
        android:textStyle="bold"
        android:theme="@style/contentTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16sp"
        android:paddingStart="16sp"
        android:paddingEnd="5sp"
        android:text="@string/center_text"
        android:textSize="20sp"
        android:theme="@style/contentTextTheme"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_txt_title" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8sp"
        android:text="@string/date_created_text"
        android:textSize="20sp"
        android:paddingStart="16sp"
        android:paddingEnd="5sp"
        android:textStyle="bold"
        android:theme="@style/contentTextTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/desc_text_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5sp"
        android:paddingTop="16sp"
        android:paddingEnd="5sp"
        android:text="@string/center_txt"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/desc_txt_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8sp"
        android:textSize="20sp"
        android:text="@string/date_created_text"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/desc_text_center" />

    <TextView
        android:id="@+id/desc_txt_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="19sp"
        android:paddingStart="16sp"
        android:paddingEnd="16sp"
        android:singleLine="false"
        android:textSize="20sp"
        android:text="@string/dummy_paragraph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>